--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,8 +1,16 @@
-ubuntu14:
-  build: ./ubuntu14
-centos6:
-  build: ./centos6
+ubuntu16:
+  build: ./ubuntu16
+  privileged: true
+centos7:
+  build: ./centos7
+ privileged: true
 #ubuntu14_10:
 #  image: localhost:5000/test_ubuntu14:1.0
 #centos6_10:
 #  image: localhost:5000/test_centos6:1.0
+isucon5:
+  build: ./isucon5
+  privileged: true
+isucon5-bench:
+  build: ./isucon5-bench
+  privileged: true
